--- a/LunarTransgression/LunarTransgressionLogic/pom.xml
+++ b/LunarTransgression/LunarTransgressionLogic/pom.xml
@@ -178,6 +178,7 @@
 						</goals>
 						<phase>generate-sources</phase>
 						<configuration>
+							<failOnError>false</failOnError>
 							<outputDirectory>${project.build.directory}/generated-sources/java/dagger</outputDirectory>
 							<options>
 							</options>
