--- a/LunarTransgression/LunarTransgressionLogic/pom.xml
+++ b/LunarTransgression/LunarTransgressionLogic/pom.xml
@@ -25,10 +25,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven-compiler-plugin-version>3.5.1</maven-compiler-plugin-version>
-		<javax-servlet-api-version>3.0.1</javax-servlet-api-version>
-		<eclipse-annotation-version>2.0.0</eclipse-annotation-version>
-		<jsoniter-version>0.9.15</jsoniter-version>
 	</properties>
 
 	<dependencies>
@@ -51,10 +47,6 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.primefaces.themes</groupId>
-			<artifactId>all-themes</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.zaxxer</groupId>
@@ -172,28 +164,13 @@
 				<artifactId>maven-processor-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>process-dagger</id>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<phase>generate-sources</phase>
-						<configuration>
-							<failOnError>false</failOnError>
-							<outputDirectory>${project.build.directory}/generated-sources/java/dagger</outputDirectory>
-							<options>
-							</options>
-							<processors>
-								<processor>dagger.internal.codegen.ComponentProcessor</processor>
-							</processors>
-						</configuration>
-					</execution>
-					<execution>
 						<id>process-jpa</id>
 						<goals>
 							<goal>process</goal>
 						</goals>
 						<phase>generate-sources</phase>
 						<configuration>
+							<sourceDirectory>${project.build.sourceDirectory}/com/github/blutorange/translune/db</sourceDirectory>
 							<outputDirectory>${project.build.directory}/generated-sources/java/jpametamodel</outputDirectory>
 							<options>
 								<fullyAnnotationConfigured>true</fullyAnnotationConfigured>
@@ -203,6 +180,21 @@
 							</options>
 							<processors>
 								<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
+							</processors>
+						</configuration>
+					</execution>
+					<execution>
+						<id>process-dagger</id>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<phase>generate-sources</phase>
+						<configuration>
+							<outputDirectory>${project.build.directory}/generated-sources/java/dagger</outputDirectory>
+							<options>
+							</options>
+							<processors>
+								<processor>dagger.internal.codegen.ComponentProcessor</processor>
 							</processors>
 						</configuration>
 					</execution>
@@ -223,7 +215,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.8</version>
 				<executions>
 					<execution>
 						<id>mkdir-jsoniter</id>
@@ -301,63 +292,6 @@
 						<version>${javax-websocket-api-version}</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-					<webResources>
-						<webResource>
-							<directory>WebContent/WEB-INF</directory>
-						</webResource>
-					</webResources>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.codehaus.cargo</groupId>
-				<artifactId>cargo-maven2-plugin</artifactId>
-				<configuration>
-					<container>
-						<containerId>wildfly10x</containerId>
-						<zipUrlInstaller>
-							<url>http://download.jboss.org/wildfly/10.1.0.Final/wildfly-10.1.0.Final.zip</url>
-						</zipUrlInstaller>
-					</container>
-					<configuration>
-						<type>standalone</type>
-						<home>
-							${project.build.directory}/wildfly-10.1.0
-						</home>
-						<properties>
-							<cargo.hostname>127.0.0.1</cargo.hostname>
-							<cargo.servlet.users>sadmin:sadmin</cargo.servlet.users>
-							<cargo.servlet.port>8082</cargo.servlet.port>
-							<cargo.logging>high</cargo.logging>
-						</properties>
-					</configuration>
-					<deployables>
-						<deployable>
-							<groupId>${project.groupId}</groupId>
-							<artifactId>${project.artifactId}</artifactId>
-							<type>war</type>
-							<properties>
-								<context>/translune</context>
-							</properties>
-						</deployable>
-					</deployables>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<configuration>
-					<path>/translune</path>
-					<port>8082</port>
-					<warSourceDirectory>WebContent</warSourceDirectory>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
