--- a/LunarTransgression/pom.xml
+++ b/LunarTransgression/pom.xml
@@ -9,7 +9,7 @@
 
 	<name>LunarTransgression</name>
 	<url>https://github.com/blutorange/LunarTransgression</url>
-
+	
 	<modules>
 		<module>LunarTransgressionLogic</module>
 		<module>LunarTransgressionMain</module>
@@ -220,7 +220,7 @@
 				<groupId>com.github.blutorange</groupId>
 				<artifactId>LunarTransgressionMain</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
-			</dependency>			
+			</dependency>
 			<dependency>
 				<groupId>javax.annotation</groupId>
 				<artifactId>javax.annotation-api</artifactId>
@@ -258,6 +258,11 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>${maven-antrun-plugin-version}</version>
+				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>build-helper-maven-plugin</artifactId>
