process messages in order

--- a/LunarTransgression/LunarTransgressionMain/src/main/resources/custom.properties
+++ b/LunarTransgression/LunarTransgressionMain/src/main/resources/custom.properties
@@ -1,3 +1,4 @@
 # Default: sadmin
 translune.sadmin.pass=sha1:64000:18:Pdew3nNV59KCsv5oQuzX+zL8iHJr9ZGn:gHbVMrVcxzZPoy5vtuqCe2KF
-translune.initid.timeout=30000
+translune.messages.timeout=10000
+translune.initid.timeout=86400000
