--- a/LunarTransgression/LunarTransgressionMain/src/main/resources/custom.properties
+++ b/LunarTransgression/LunarTransgressionMain/src/main/resources/custom.properties
@@ -1,4 +1,11 @@
 # Default: sadmin
 translune.sadmin.pass=sha1:64000:18:Pdew3nNV59KCsv5oQuzX+zL8iHJr9ZGn:gHbVMrVcxzZPoy5vtuqCe2KF
+# milliseconds
 translune.messages.timeout=10000
+# milliseconds
 translune.initid.timeout=86400000
+translune.threads.maxcount=100
+# milliseconds
+translune.battle.preparation.timeout=30000
+# milliseconds
+translune.battle.round.timeout=60000
