--- a/LunarTransgression/LunarTransgressionLogic/pom.xml
+++ b/LunarTransgression/LunarTransgressionLogic/pom.xml
@@ -23,6 +23,7 @@
 			<groupId>com.github.blutorange</groupId>
 			<artifactId>nullannotation</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.blutorange</groupId>
@@ -80,6 +81,10 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.simpleflatmapper</groupId>
+			<artifactId>sfm</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
