--- a/LunarTransgression/pom.xml
+++ b/LunarTransgression/pom.xml
@@ -63,6 +63,7 @@
 		<commons-dbcp-version>1.4</commons-dbcp-version>
 		<commons-lang3-version>3.6</commons-lang3-version>
 		<commons-text-version>1.1</commons-text-version>
+		<sfm-version>2.14.1</sfm-version>
 		<dagger-version>2.11</dagger-version>
 		<eclipse-annotation-version>2.0.0</eclipse-annotation-version>
 		<exec-maven-plugin-version>1.5.0</exec-maven-plugin-version>
@@ -72,7 +73,7 @@
 		<javax-ejb-api-version>3.2</javax-ejb-api-version>
 		<javax-el-api-version>2.2.5</javax-el-api-version>
 		<javax-el-impl-version>2.2</javax-el-impl-version>
-		<javax-faces-version>2.2.8-03</javax-faces-version>
+		<javax-faces-version>2.2.14</javax-faces-version>
 		<javax-servlet-api-version>3.0.1</javax-servlet-api-version>
 		<javax-websocket-api-version>1.1</javax-websocket-api-version>
 		<javax-ws-rs-api-version>2.0.1</javax-ws-rs-api-version>
@@ -103,6 +104,7 @@
 		<quartz-version>2.3.0</quartz-version>
 		<slf4j-api-version>1.7.25</slf4j-api-version>
 		<slf4j-log4j12-version>1.7.25</slf4j-log4j12-version>
+		<tika-version>1.16</tika-version>
 		<tomcat7-maven-plugin-version>2.2</tomcat7-maven-plugin-version>
 		<validation-api-version>2.0.0.Final</validation-api-version>
 	</properties>
@@ -120,9 +122,19 @@
 				<version>${quartz-version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.tika</groupId>
+				<artifactId>tika-core</artifactId>
+				<version>${tika-version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-text</artifactId>
 				<version>${commons-text-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.simpleflatmapper</groupId>
+				<artifactId>sfm</artifactId>
+				<version>${sfm-version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.omnifaces</groupId>
