--- a/LunarTransgression/LunarTransgressionLogic/pom.xml
+++ b/LunarTransgression/LunarTransgressionLogic/pom.xml
@@ -75,6 +75,10 @@
 			<artifactId>dagger</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
