--- a/LunarTransgression/LunarTransgressionLogic/src/main/resources/log4j.properties
+++ b/LunarTransgression/LunarTransgressionLogic/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Define the root logger with appender X
-log4j.rootLogger = DEBUG, FILE, CONSOLE
+log4j.rootLogger = WARN, FILE, CONSOLE
 
 # Set the appender named X to be a File appender
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
