--- a/LunarTransgression/LunarTransgressionMain/pom.xml
+++ b/LunarTransgression/LunarTransgressionMain/pom.xml
@@ -149,7 +149,7 @@
 							<cargo.hostname>127.0.0.1</cargo.hostname>
 							<cargo.servlet.users>sadmin:sadmin</cargo.servlet.users>
 							<cargo.servlet.port>8082</cargo.servlet.port>
-							<cargo.logging>high</cargo.logging>
+							<cargo.logging>medium</cargo.logging>
 							<cargo.start.jvmargs>
 								-Xdebug
 								-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=127.0.0.1:8888
