--- a/LunarTransgression/pom.xml
+++ b/LunarTransgression/pom.xml
@@ -70,10 +70,10 @@
 		<commons-io-version>2.4</commons-io-version>
 		<commons-lang3-version>3.6</commons-lang3-version>
 		<commons-text-version>1.1</commons-text-version>
-		<sfm-version>2.14.1</sfm-version>
 		<dagger-version>2.11</dagger-version>
 		<eclipse-annotation-version>2.0.0</eclipse-annotation-version>
 		<exec-maven-plugin-version>1.5.0</exec-maven-plugin-version>
+		<fastjson-version>1.2.37</fastjson-version>
 		<hibernate-version>5.2.10.Final</hibernate-version>
 		<hikari-cp-version>2.6.2</hikari-cp-version>
 		<javax-annotation-api>1.3</javax-annotation-api>
@@ -109,6 +109,7 @@
 		<primefaces-version>6.1</primefaces-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<quartz-version>2.3.0</quartz-version>
+		<sfm-version>2.14.1</sfm-version>
 		<slf4j-api-version>1.7.25</slf4j-api-version>
 		<slf4j-log4j12-version>1.7.25</slf4j-log4j12-version>
 		<tika-version>1.16</tika-version>
@@ -118,6 +119,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>${fastjson-version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.quartz-scheduler</groupId>
 				<artifactId>quartz</artifactId>
