--- a/LunarTransgression/LunarTransgressionLogic/src/main/resources/custom.properties
+++ b/LunarTransgression/LunarTransgressionLogic/src/main/resources/custom.properties
@@ -7,6 +7,8 @@ translune.messages.timeout=10000
 translune.initid.timeout=86400000
 translune.threads.maxcount=100
 # milliseconds
-translune.battle.preparation.timeout=30000
+translune.battle.preparation.timeout=60000
 # milliseconds
-translune.battle.round.timeout=60000
+translune.battle.round.timeout=120000
+# milliseconds
+translune.battle.first.timeout=15000
