--- a/LunarTransgression/LunarTransgressionLogic/pom.xml
+++ b/LunarTransgression/LunarTransgressionLogic/pom.xml
@@ -63,6 +63,10 @@
 			<artifactId>HikariCP</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
